# ShowStats

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  app.py  build_dataset.py  deploy.sh  helper_functions.py  iam-policy.json  pyproject.toml  requirements.txt  showstats_app.py
assets/: stylesheet.css
create_dataset/: get_data.ipynb
data/: wsp_phish_goose_test_df.parquet
pages/: about_page.py  faq_page.py  showstats_app.py
src/showstats/: app.py  cache.py  config.py  utils.py
src/showstats/assets/: stylesheet.css
src/showstats/pages/: about_page.py  faq_page.py  showstats_app.py
src/showstats/pipeline/: build_dataset.py
terraform/: alb.tf  cloudfront.tf  cloudwatch.tf  ecr.tf  ecs.tf  iam.tf  main.tf  outputs.tf  s3.tf  scheduler.tf  secrets.tf  security_groups.tf  variables.tf  vpc.tf
